--- a/_posts/DataScience/2016-06-29-DB.md
+++ b/_posts/DataScience/2016-06-29-DB.md
@@ -1,10 +1,10 @@
 ---
-title: OSX에서 MySQL 설치하기, RMySQL 패키지 사용, SQL 문법
+title: OSX에서 MySQL 설치하기, RMySQL 패키지 사용하기, 간단한 SQL 문법
 layout: post
 comments: true
 share: true
 categories: DataScience
-tags: [Data Science, MySQL, DB]
+tags: [Data Science, MySQL, DB, R, Homebrew]
 ---
 
 ## MySQL 설치하기
@@ -200,4 +200,5 @@ DROP DATABASE mydb;
 SELECT count(1) from mytable; gives the number of records in the table
 ```
 
-Reference: https://mariadb.com/kb/ko/basic-sql-statements/
+## Reference
+* https://mariadb.com/kb/ko/basic-sql-statements/
