--- a/_posts/2016-06-07-Tozer.md
+++ b/_posts/2016-06-07-Tozer.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Tozer 11장 연습문제 6번
+title: Tozer 11장 연습문제 6번 문제풀이
 date: 2016-06-08
-tags: [Clinical Pharmacology]
+tags: [Clinical Pharmacology, Tozer, R]
 categories: CPT
 share: true
 comments: true
