--- a/_posts/CPT/2016-07-01-MBDD.md
+++ b/_posts/CPT/2016-07-01-MBDD.md
@@ -11,10 +11,22 @@ comment: true
 
 # Model-based drug development: a rational approach to efficiently accelerate drug development.
 Milligan PA et al.
-[Clin Pharmacol Ther. 2013 Jun;93(6):502-14. doi: 10.1038/clpt.2013.54. Epub 2013 Mar 14.](http://www.ncbi.nlm.nih.gov/pubmed/?term=Model-Based+Drug+Development%3A+A+Rational+Approach+to+Efficiently+Accelerate+Drug+Development)
+  [Clin Pharmacol Ther. 2013 Jun;93(6):502-14. doi: 10.1038/clpt.2013.54. Epub 2013 Mar 14.](http://www.ncbi.nlm.nih.gov/pubmed/?term=Model-Based+Drug+Development%3A+A+Rational+Approach+to+Efficiently+Accelerate+Drug+Development)
 
+## Contents
 ![스크린샷 2016-07-01 16.18.45](http://i.imgur.com/yhi5UTt.png)
 model-based drug development (MBDD)
 
-* 결국 모델링은 Information이 exchange할 수 있게 도와주는 tool입니다. = Knowledge Management Tool
+* " 결국 모델링은 Information이 exchange할 수 있게 도와주는 tool입니다. = Knowledge Management Tool "
 * 종횡으로 통하게 할 수 있습니다. Integration이 가능합니다. Forward, backward 방향으로 feedback을 할 수 있습니다.
+
+* 예 1 . Endometriosis Pain Tx - GnRH pathway targeting의 어려움을 예측해서 일찍 개발을 포기함.
+* 예 2. N-arachidonyl ethanolamine (anadamide, AEA) - for pain relief
+    * additional metabolism process가 존재함을 알게됨.
+* 예 3. Systems pharmacology modeling - sodium/glucose cotransporter 2 inhibitor - SGLT2 inhibitor - 신장에서 glc 재흡수 하는데 주요 역할을 하여 T2DM에서 urinary glc excretion (UGE) 증가시킴
+![enter image description here](http://www.diabetesincontrol.com/wp-content/uploads/2013/04/www.diabetesincontrol.com_images_sglt2_sglt2-1hdiw.png)
+* 예 4. adaptive dose-finding phase IIb study designed using clinical trial simulation
+* 예 5. RA약물 Tofacitinib
+
+## Question
+* Target은 많으나 무엇이 가장 좋은지는 의문이 듭니다. MBDD가 이런 것을 해결해 줄 수 있습니다.
