--- a/_posts/CPT/2016-07-01-MBDD.md
+++ b/_posts/CPT/2016-07-01-MBDD.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: MBDD
-excerpt:
+excerpt: MBDD paper review
 tags: [Modeling and Simulation]
 categories: CPT
 date: 2016-07-01
