--- a/_posts/CPT/2016-07-01-MBDD.md
+++ b/_posts/CPT/2016-07-01-MBDD.md
@@ -6,7 +6,7 @@ tags: [Modeling and Simulation]
 categories: CPT
 date: 2016-07-01
 share: true
-comment: true
+comments: true
 ---
 
 # Model-based drug development: a rational approach to efficiently accelerate drug development.
