--- a/_posts/2016-07-04-A-future-R.md
+++ b/_posts/2016-07-04-A-future-R.md
@@ -4,7 +4,7 @@ title: A future for R
 categories: DataScience
 share: true
 comments: true
-tag: [R, Data Science]
+tag: [R, Data Science, ODBC]
 ---
 
 useR 2016에서 있었던 것중에 특징적인 것을 가져왔습니다.
