--- a/_posts/Life/2016-07-05-chloe.md
+++ b/_posts/Life/2016-07-05-chloe.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: Chloe
-categories: Life
+categories: Personal
 share: true
 comments: true
-tag: [Life]
+tag: [Personal, Chloe]
 ---
 
 this
