--- a/_posts/Life/2016-07-07-Summer.md
+++ b/_posts/Life/2016-07-07-Summer.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: Skateboard
-categories: Life
+categories: Personal
 share: true
 comments: true
-tag: [skateboard]
+tag: [Personal, Skateboard]
 ---
 
 주문한 스케이트보드가 도착했습니다. ^^
