--- a/_ConferencesSource/index.Rmd
+++ b/_ConferencesSource/index.Rmd
@@ -14,7 +14,7 @@ site: bookdown::bookdown_site
 
 description: "A guide to authoring books with R Markdown, including how to generate figures and tables, and insert cross-references, citations, HTML widgets, and Shiny apps in R Markdown. The book can be exported to HTML, PDF, and e-books (e.g. EPUB). The book style is customizable. You can easily write and preview the book in RStudio IDE or other editors, and host the book wherever you want (e.g. bookdown.org)."
 
-url: 'https\://shanmdphd.github.io/Conferences/'
+url: 'http\://shanmdphd.github.io/Conferences/'
 github-repo: shanmdphd/PAPER
 cover-image: images/cover.png
 ---
