--- a/_ConferencesSource/References.bib
+++ b/_ConferencesSource/References.bib
@@ -11,3 +11,17 @@
   title = {Modeling and simulation analysis of the relationship between lesion recurrence on brain images and clinical recurrence in patients with ischemic stroke},
   journal = {The Journal of Clinical Pharmacology},
 }
+
+@Article{Lee_2015,
+  doi = {10.1007/s00431-015-2581-x},
+  url = {http://dx.doi.org/10.1007/s00431-015-2581-x},
+  year = {2015},
+  month = {jun},
+  publisher = {Springer Science $\mathplus$ Business Media},
+  volume = {174},
+  number = {12},
+  pages = {1671--1678},
+  author = {Jung Woo Lee and Yookyung Kim and Vidya Perera and Andrew J. McLachlan and Kyun-Seop Bae},
+  title = {Prediction of plasma caffeine concentrations in young adolescents following ingestion of caffeinated energy drinks: a Monte Carlo simulation},
+  journal = {European Journal of Pediatrics},
+}
