--- a/ConferencesBook/bookdown.tex
+++ b/ConferencesBook/bookdown.tex
@@ -24,7 +24,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
 \hypersetup{unicode=true,
-            pdftitle={PRISM 2016},
+            pdftitle={Conferences 2016},
             pdfauthor={Sungpil Han},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -63,6 +63,8 @@
 \usepackage{booktabs}
 \usepackage{longtable}
 \usepackage{framed,color}
+\usepackage{kotex}
+
 \definecolor{shadecolor}{RGB}{248,248,248}
 
 \ifxetex
@@ -124,7 +126,7 @@
 }
 
 \setlength{\droptitle}{-2em}
-  \title{PRISM 2016}
+  \title{Conferences 2016}
   \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
   \author{Sungpil Han}
@@ -147,7 +149,7 @@
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{http://i.imgur.com/io9QIQDh.jpg}
+\includegraphics{images/2016KSCPT.jpg}
 \caption{Materials}
 \end{figure}
 
@@ -907,7 +909,7 @@ USA)}\label{lecture-2----tom-lawry-microsoft-corp.-usa}
   혹시 talk를 들으시고 관심있으면 Contact.
 \end{itemize}
 
-\includegraphics{http://aims.amc.seoul.kr/asan/imageDown/homebuilder/20160527?fileName=Scientific-Program-kor.jpg}
+\url{http://aims.amc.seoul.kr/asan/imageDown/homebuilder/20160527?fileName=Scientific-Program-kor.jpg}
 \url{http://www.amc.seoul.kr/asan/academy/event/eventDetail.do?eventId=572}
 \url{http://aims.amc.seoul.kr/asan/depts/aims/E/deptMain.do}
 
