--- a/_ConferencesSource/preamble.tex
+++ b/_ConferencesSource/preamble.tex
@@ -1,6 +1,8 @@
 \usepackage{booktabs}
 \usepackage{longtable}
 \usepackage{framed,color}
+\usepackage{kotex}
+
 \definecolor{shadecolor}{RGB}{248,248,248}
 
 \ifxetex
