--- a/_ConferencesSource/index.Rmd
+++ b/_ConferencesSource/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "PRISM 2016"
+title: "Conferences 2016"
 author: "Sungpil Han"
 date: "`r Sys.Date()`"
 
@@ -13,6 +13,8 @@ link-citations: true
 site: bookdown::bookdown_site
 
 description: "A guide to authoring books with R Markdown, including how to generate figures and tables, and insert cross-references, citations, HTML widgets, and Shiny apps in R Markdown. The book can be exported to HTML, PDF, and e-books (e.g. EPUB). The book style is customizable. You can easily write and preview the book in RStudio IDE or other editors, and host the book wherever you want (e.g. bookdown.org)."
+
+graphics: yes
 
 url: 'http\://shanmdphd.github.io/Conferences/'
 github-repo: shanmdphd/PAPER
