--- a/_posts/2016-07-18-vim.md
+++ b/_posts/2016-07-18-vim.md
@@ -3,7 +3,7 @@ layout: post
 title: vim의 매력
 tags: [vim]
 share: yes
-comment: yes
+comments: yes
 ---
 
 - 빠릅니다.
@@ -11,4 +11,20 @@ comment: yes
 - 무엇보다 가볍습니다.
 
 I love Vim!
+
+사실상 이 링크에서 보이는 기능들을 다 사용한다면 Atom이 굳이 필요 없을지도 모르겠다는 생각을 하게 됩니다.
+
+- [Why I use Vim](https://jaxbot.me/articles/why-i-use-vim)
+
+몇가지 Animated Gifs를 가져오자면 다음과 같습니다.
+
+![](https://jaxbot.me/pics/vim/vim_windows.gif)
+
+![](https://jaxbot.me/pics/vim/vim_macros2.gif)
+
+![](https://jaxbot.me/pics/vim/vim_diff.gif)
+
+다만 이 경지에 이르기 위해선 많이 사용해봐야 할 것 같습니다.
+
+Happy Vim!
 
