--- a/_posts/2016-07-19-DDMoRe.md
+++ b/_posts/2016-07-19-DDMoRe.md
@@ -4,13 +4,22 @@ title: DDMoRe
 categories: 
 share: true
 comments: true
-tag: [DDMoRe, Pharmacometrics, NONMEM]
+tag: [DDMoRe, Pharmacometrics, NONMEM, Modeling and Simulation]
 ---
 
 Lutz Harnisch, Mats Karlsson 등의 리드로 DDMoRe가 날로 발전하고 있는 것을 느낍니다.
 
-과연 어떻게 진행될지 주의깊게 관찰해야 하겠습니다.
+과연 어떻게 진행될지 주의깊게 관찰해야 하겠습니다. Pharmacometrics의 표준을 세워나가려는 DDMoRe group의 노력이 어떻게 결실을 맺게 될런지..
+
+일단 PharmML을 배우고, MDL IDE를 체험해보는 것으로 DDMoRe 체험을 시작하려 합니다.
 
 DDMoRe : an introduction and demo - Mike Smith
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7FmrPKAhFKM" frameborder="0" allowfullscreen></iframe>
+
+## Resources
+- [MDL User Guide](http://www.ddmore.eu/instructions/mdl-user-guide)
+- [MDL - Model Description Language](http://www.ddmore.eu/timeline/mdl)
+- [Modelling Description Language Nick Holford and Mike K Smith](www.page-meeting.org/pdf_assets/7455-PAGE%20MDL%20plus%20Rosetta%20Stone%20Holford%20&%20Smith.pdf)
+- [MDL-IDE](http://www.ddmore.eu/timeline/mdl-ide)
+- [MDL User Guideline](http://www.ddmore.eu/sites/ddmore/files/downloads/MDL%20IDE%201.0%20%28alpha%29%20User%20Guide.pdf)
