--- a/_ConferencesSource/index.Rmd
+++ b/_ConferencesSource/index.Rmd
@@ -12,12 +12,12 @@ link-citations: true
 
 site: bookdown::bookdown_site
 
-description: "A guide to authoring books with R Markdown, including how to generate figures and tables, and insert cross-references, citations, HTML widgets, and Shiny apps in R Markdown. The book can be exported to HTML, PDF, and e-books (e.g. EPUB). The book style is customizable. You can easily write and preview the book in RStudio IDE or other editors, and host the book wherever you want (e.g. bookdown.org)."
+description: "Conferences mainly regarding clinical pharmacology, pharmacometrics and medicine will be summarized here."
 
 graphics: yes
 
 url: 'http\://shanmdphd.github.io/Conferences/'
-github-repo: shanmdphd/PAPER
+github-repo: shanmdphd/shanmdphd.github.io
 cover-image: images/cover.png
 ---
 
@@ -28,10 +28,12 @@ lapply(c('DT'), function(pkg) {
 })
 if (packageVersion('DT') < '0.1.45') devtools::install_github('rstudio/DT')
 
+library(DT)
 library(knitcitations); cleanbib()
 cite_options(citation_format = "pandoc", check.entries=FALSE)
 library(bibtex)
-
 ```
 
 # Introduction
+
+Conferences mainly regarding clinical pharmacology, pharmacometrics and medicine will be summarized here.
