--- a/_posts/2016-07-20-Linus.md
+++ b/_posts/2016-07-20-Linus.md
@@ -14,6 +14,12 @@ Linus Torvalds의 TED 강의를 들었습니다.
 
 정말로 인상적인 강의라 생각됩니다.
 
+영상 초반에 그가 작업하는 공간의 사진이 공개되었는데요..
+
+![Imgur](http://i.imgur.com/0jeaDnD.png)
+
+전 세계의 수많은 컴퓨터에 들어가있는 리눅스를 만든 software engineer의 작업실 치고는 참으로 단촐합니다.
+
 두번 보았는데 더더욱 존경스러워 지는군요.
 
 후반부의 Tesla와 Edison의 비교는 참으로 적절해 보입니다.
