--- a/_posts/2016-08-30-coffee.md
+++ b/_posts/2016-08-30-coffee.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: 아메리카노 + 라떼
-categories: life
+categories: personal
 share: true
 comments: true
-tag: [life]
+tag: [personal, coffee]
 ---
 
 항상 고민스러운 문제 였는데 이렇게 좋은 아이디어가 있다니!
