--- a/_ConferencesSource/2016-08-22-toxicology.Rmd
+++ b/_ConferencesSource/2016-08-22-toxicology.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 2016 독성학 전문교육과정 요약
 ---
-# 2016 독성학 전문교육과정
+# Toxicology 2016 
 - author: 한성필
 - date: 2016-08-22 ~ 2016-08-23
 - venue: 숙명여자대학교 백주년기념관 2층 컨벤션 센터
