--- a/_posts/2016-05-29-ODBC.md
+++ b/_posts/2016-05-29-ODBC.md
@@ -5,13 +5,13 @@ categories: DataScience
 comments: true
 ---
 
-## Intro
+## Introduction
 - One data는 한군데만 있는게 좋습니다.
 - Normalization 이론 참고.
 - ODBC - MS-windows 용
 - xlsx, Oracle DB, mysql 등 DB의 형태는 다양한 모습일 수 있습니다.
 
-## ODBC
+## About ODBC
 ### "Brian Ripley" - Oxford
 
 * ODBC(Open DataBase Connectivity)는 마이크로소프트가 만든, 데이터베이스에 접근하기 위한 소프트웨어의 표준 규격입니다.
@@ -50,4 +50,4 @@ DrugB.ODBC = sqlFetch(Conc, "DrugB", as.is=TRUE)
 ## Discussion
 - R에서 Data를 불러오는 여러가지 방법 중에 가장 오래된 전통을 갖고 있습니다.
 - 안정적으로 동작합니다.
-- 그러나 64비트 개발환경을 사용할 수 없다는 점, OSX와 Linux 등에서 사용이 용이하지 않다는 점은 hurdle일 수 있습니다.
+- 그러나 64비트 개발환경을 사용할 수 없다는 점, OSX와 Linux 등에서 사용이 용이하지 않다는 점은 단점일 수 있습니다.
