--- a/_posts/2016-10-02-Ubuntu-R.md
+++ b/_posts/2016-10-02-Ubuntu-R.md
@@ -7,13 +7,7 @@ comments: true
 tag: [Ubuntu]
 ---
 
-Ubuntu를 8년 전에 샀던 PC에 인스톨 하였습니다.
-
-Ubuntu에서 R을 통한 개발 환경을 구축해보려 하였습니다.
-
-그러나 설치했는데 최신 버전이 아닌 구버전이 설치되는 것이었습니다.
-
-다음의 포스트를 보고 R 3.3.1 버전 설치를 성공하였습니다.
+Ubuntu를 8년 전에 샀던 PC에 인스톨 하였습니다. Ubuntu에서 R을 통한 개발 환경을 구축해보려 하였습니다. 그러나 설치했는데 최신 버전이 아닌 구버전이 설치되는 것이었습니다. 다음의 포스트를 보고 R 3.3.1 버전 설치를 성공하였습니다.
 
 ![](http://i.imgur.com/e7cSKs6.png)
 
@@ -32,13 +26,13 @@ sudo echo "deb http://cran.rstudio.com/bin/linux/ubuntu xenial/" | sudo tee -a /
 First:
 
 ```bash
- gpg --keyserver keyserver.ubuntu.com --recv-key E084DAB9
+gpg --keyserver keyserver.ubuntu.com --recv-key E084DAB9
 ```
 
 Then:
 
 ```bash
- gpg -a --export E084DAB9 | sudo apt-key add -
+gpg -a --export E084DAB9 | sudo apt-key add -
 ```
 
 ## Install R-Base
